[tool.poetry]
name = "dask_playground"
version = "0.1.0"
description = "Dask Playground for experimentation"
authors = ["Joshua Wang <hello@wangjoshuah.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
dask = {extras = ["complete"], version = "^2022.12.0"}
prefect = "^1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
